Fix: Remove flex-direction from right-aligned messages

--- a/style.css
+++ b/style.css
@@ -204,7 +204,6 @@ body {
 
 .message.right {
     align-self: flex-end;
-    flex-direction: row-reverse;
 }
 
 .message-avatar {
